banner section done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="style/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -16,11 +19,11 @@
 <body>
     <header>
         <nav>
-            <div class="flex justify-between w-320 items-center m-10">
+            <div class="flex justify-between w-6xl items-center m-10">
                 <div>
                     <img class="w-30 h-15" src="img/logo.png" alt="">
                 </div>
-                <div class="flex gap-15">
+                <div class="flex gap-10">
                     <a class="inter-text font-bold" href="">Home</a>
                     <a class="inter-text text-slate-400" href="">Shop</a>
                     <a class="inter-text text-slate-400" href="">About us</a>
@@ -31,7 +34,15 @@
                 </div>
             </div>
         </nav>
-        
+        <section class="flex w-6xl ml-10 mr-10 mt-30 gap-5 ">
+            <div class="w-xl h-sm mt-35">
+                <h1 class="noto-serif-head text-6xl mb-5 font-bold  ">ALWAYS <span class="text-red-400 ">FRESH FLOWERS</span></h1>
+                <p class="text-neutral-400 inter-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+            </div>
+            <div>
+                <img class="w-xl h-xs" src="img/hero-flower.png" alt="">
+            </div>
+        </section>
     </header>
     <main>
 
