main 1st part done

--- a/index.html
+++ b/index.html
@@ -37,15 +37,88 @@
         <section class="flex w-6xl ml-10 mr-10 mt-30 gap-5 ">
             <div class="w-xl h-sm mt-35">
                 <h1 class="noto-serif-head text-6xl mb-5 font-bold  ">ALWAYS <span class="text-red-400 ">FRESH FLOWERS</span></h1>
-                <p class="text-neutral-400 inter-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                <p class="text-neutral-400 inter-text ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
                 <img class="w-xl h-xs" src="img/hero-flower.png" alt="">
             </div>
         </section>
     </header>
-    <main>
-
+    <main class="w-6xl">
+        <section class="ml-10 mr-10 mt-30">
+            <div>
+                <div class="justify-items-center">
+                    <h2 class="noto-serif-head text-4xl font-bold mb-5"> <span class="text-red-400 ">Our </span>Plants</h2>
+                    <p class="text-neutral-400 inter-text mb-8 px-54 text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                </div>
+                <div class="grid grid-cols-4 gap-x-20 gap-y-5">
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                    <div class="plant-card-container ">
+                        <img class="mt-" src="img/sample-flower-image.png" alt="">
+                        <div class="text-center mt-5">
+                            <p class="inter-text">Lily Blossom</p>
+                            <p class="inter-text font-bold mt-2 mb-4">20 USD</p>
+                        </div>
+                        <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
