Plants Lover Section done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
     </header>
     <main class="w-6xl">
-        <section class="ml-10 mr-10 mt-30">
+        <section class="ml-10 mr-10 mt-30 mb-30">
             <div>
                 <div class="justify-items-center">
                     <h2 class="noto-serif-head text-4xl font-bold mb-5"> <span class="text-red-400 ">Our </span>Plants</h2>
@@ -116,6 +116,22 @@
                         </div>
                         <button class="font-semibold bg-orange-600 btn-cart cursor-pointer">ADD TO CART</button>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="ml-10 mr-10 mb-30 w-[1140px]">
+            <div class="flower-conatiner flex gap-x-20 ">
+                <div>
+                    <img class="relative" src="img/flower-store.png" alt="">
+                    <img class="absolute mt-[-710px] ml-[350px] w-[286px] h-[286px]" src="img/trusted-badge.png" alt="">
+                </div>
+                <div class="my-15">
+                    <h2 class="noto-serif-head text-4xl font-bold mb-5 w-[300px]">Flower & Plants Lover</h2>
+                    <ul>
+                        <li class="inter-text text-neutral-400 w-[450px] mb-4 text-xl">-> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="inter-text text-neutral-400 w-[450px] mb-4 text-xl">-> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li class="inter-text text-neutral-400 w-[450px] mb-4 text-xl">-> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
                 </div>
             </div>
         </section>
