main section done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <section class="flex w-6xl ml-10 mr-10 mt-30 gap-5 ">
             <div class="w-xl h-sm mt-35">
-                <h1 class="noto-serif-head text-6xl mb-5 font-bold  ">ALWAYS <span class="text-red-400 ">FRESH FLOWERS</span></h1>
+                <h1 class="noto-serif-head text-6xl mb-5 font-bold">ALWAYS <span class="text-orange-400 ">FRESH FLOWERS</span></h1>
                 <p class="text-neutral-400 inter-text ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
             </div>
             <div>
@@ -48,7 +48,7 @@
         <section class="ml-10 mr-10 mt-30 mb-30">
             <div>
                 <div class="justify-items-center">
-                    <h2 class="noto-serif-head text-4xl font-bold mb-5"> <span class="text-red-400 ">Our </span>Plants</h2>
+                    <h2 class="noto-serif-head text-4xl font-bold mb-5"> <span class="text-orange-400 ">Our </span>Plants</h2>
                     <p class="text-neutral-400 inter-text mb-8 px-54 text-center">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
                 </div>
                 <div class="grid grid-cols-4 gap-x-20 gap-y-5">
@@ -119,7 +119,7 @@
                 </div>
             </div>
         </section>
-        <section class="ml-10 mr-10 mb-30 w-[1140px]">
+        <section class="ml-10 mr-10 mt-40 mb-30 w-[1140px]">
             <div class="flower-conatiner flex gap-x-20 ">
                 <div>
                     <img class="relative" src="img/flower-store.png" alt="">
@@ -132,6 +132,42 @@
                         <li class="inter-text text-neutral-400 w-[450px] mb-4 text-xl">-> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                         <li class="inter-text text-neutral-400 w-[450px] mb-4 text-xl">-> Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     </ul>
+                </div>
+            </div>
+        </section>
+        <section class="ml-10 mr-10 mb-30 w-[1140px] justify-items-center">
+            <h2 class="noto-serif-head text-5xl mb-5 font-bold"><span class="text-orange-400 ">Latest </span> Deals</h2>
+            <p class="text-neutral-400 inter-text mb-15 px-54 text-center text-xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="flex gap-8">
+                <div>
+                    <div class="bloom-img w-[367px] h-[202px] relative rounded-xl">
+                        <div class="absolute mt-[70px]">
+                            <p class="noto-serif-head font-blod text-stone-50 text-xl mx-[60px] mb-3">60% OFF | Bloom Plant</p>
+                            <a class="inter-text font-semiblod text-stone-50 mx-[118px] underline" href="">Shop Now</a>
+                        </div>
+                    </div>
+                    <div class="ana-img w-[367px] h-[202px] relative  rounded-xl">
+                        <div class="absolute mt-[70px]">
+                            <p class="noto-serif-head font-blod text-stone-50 text-xl mx-[60px] mb-3">30% OFF | Ana Plant</p>
+                            <a class="inter-text font-semiblod text-stone-50 mx-[118px] underline" href="">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class=" zabo-img relative w-[753px] h-[424px] rounded-xl">
+                    <div class="absolute mt-[180px] mx-[180px] ">
+                        <p class="noto-serif-head font-blod text-4xl mb-2 text-stone-50">25% OFF | Zabo Plant</p>
+                        <a class="inter-text font-semibold text-2xl mx-[100px] text-stone-50 underline" href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class=" mb-20">
+            <div class="news-letter-container w-[1440px] h-[533px] bg-cover bg-center justify-items-center px-[250px] py-[200px]">
+                <h2 class="font-blod text-5xl noto-serif-head text-stone-100 mb-8">Join the colorful Bunch</h2>
+                <div class="flex gap-0">
+                    <input class="w-[644px] h-[50px] bg-stone-50 p-5" type="email" name="" placeholder="Write Email" id="">
+
+                    <button class="inter-text w-[186px] h-[50px] bg-orange-600 font-semiblod text-stone-50 cursor-pointer">Subscribe</button>
                 </div>
             </div>
         </section>
