footer section done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="w-[1440px]">
         <nav>
             <div class="flex justify-between w-6xl items-center m-10">
                 <div>
@@ -44,7 +44,7 @@
             </div>
         </section>
     </header>
-    <main class="w-6xl">
+    <main class="w-[1440px]">
         <section class="ml-10 mr-10 mt-30 mb-30">
             <div>
                 <div class="justify-items-center">
@@ -172,8 +172,35 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="w-[1440px]">
+        <section class="w-[1120px] h-[250px] mx-[160px] my-[50px]">
+            <div class="flex">
+                <div class="mr-[100px] w-[359px]">
+                    <img class="w-[135px] h-[82px] mb-4" src="img/logo.png" alt="">
+                    <p class="font-xl text-neutral-400 inter-text ">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+                </div >
+                <div class="flex flex-col mr-[110px]">
+                    <a class="inter-text text-gray-500 mb-5" href="">Home</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">About us</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">Blog</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">FAQ</a>
+                    <a class="inter-text text-gray-500 "  href="">Contact Us</a>
+                </div>
+                <div class="flex flex-col  mr-[90px]">
+                    <a class="inter-text text-gray-500  mb-5"  href="">Features</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">Pricing</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">Privacy Policy</a>
+                    <a class="inter-text text-gray-500 mb-5"  href="">Team Of service</a>
+                    <a class="inter-text text-gray-500 "  href="">Help center</a>
+                </div>
+                <div class="flex gap-8">
+                    <img class="h-[32px] w-[32px] " src="img/icon-linkedin.png" alt="">
+                    <img class="h-[32px] w-[32px] "  src="img/icon-twitter.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="img/icon-facebook.png" alt="">
+                    <img class="h-[32px] w-[32px] "  src="img/icon-youtube.png" alt="">
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
